--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,7 +39,9 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.general_mentos.maps_devfest"
-        minSdkVersion 16
+        // TODO: Look into bringing multidex support for apps with minSdkVersion level below 21 https://developer.android.com/studio/build/multidex 
+        // changed minSdkVersion version from 16 (Jelly Bean) to 21 (Lollipop) for multidex support needed by FlutterFire plugins (cloud_firestore)
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -65,3 +67,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
