--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,11 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
+        // // TODO: Do not use a version higher than 3.2.1, remove at a later time when support is bumped up
+        // https://firebase.google.com/docs/android/setup#manually_add_firebase
+        // TODO: Curently testing 4.3.2, might need to rollback to 3.2.1
+        classpath 'com.google.gms:google-services:4.3.2'
+        // classpath 'com.google.gms:google-services:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
