--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   cloud_firestore: ^0.12.9+6
+  google_maps_flutter: ^0.5.21+8
 
 dev_dependencies:
   flutter_test:
