Add Google Maps API KEY to AndroidManifest.xml

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="maps_devfest"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyBeWPTHzuEOemzDus-VS3vSMR5JqqD5I-U"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
