--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -46,5 +46,6 @@
 	<false/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app needs access to location when open.</string>
+	<!-- TODO: add if needed in future <key>NSLocationAlwaysUsageDescription</key> -->
 </dict>
 </plist>
